# Big-Brother

./: .gitignore  README.md
bb_detection/: package.xml  setup.cfg  setup.py
bb_detection/bb_detection/: fake_lidar_detector.py  lidar_detector.py  thermal_detector.py  utility.py  yolo_detector.py
bb_detection/bb_detection/bev/: Bev.py  Camera.py  bev.py  main.py  utils.py
bb_detection/bb_detection/config/: odt_configs.py
bb_detection/launch/: detect.launch.py  detect_multi.launch.py  detect_on_bag.launch.py  lidar_on_bag.launch.py  thermal_on_bag.launch.py  yolo_and_thermal.launch.py  yolo_on_bag.launch.py
bb_interfaces/: CMakeLists.txt  package.xml
bb_interfaces/msg/: Detection2DWithFeatures.msg  STrack.msg  STrackArray.msg  Stats.msg
bb_interfaces/srv/: ChangeMessage.srv
bb_tracker/: CMakeLists.txt  package.xml
bb_tracker/.rviz2/: tracker.rviz
bb_tracker/config/: tracker_params.yaml  tracker_params_multi_sens.yaml  tracker_params_no_det.yaml
bb_tracker/include/bb_tracker/: BYTETracker.h  CircularBuffer.hpp  EKF.hpp  LinearBuffer.hpp  STrack.h  bb_tracker.hpp  dataType.h  ellipsoid_ellipse.hpp  kalmanFilter.h  lapjv.h  logging.h
bb_tracker/launch/: detect_and_track.launch.py  track.launch.py  track_on_bag.launch.py  track_on_bag_multi_sens.launch.py
bb_tracker/src/: BYTETracker.cpp  EKF.cpp  STrack.cpp  bb_tracker.cpp  bytetrack.cpp  computeJacobianEllipse.cpp  ellipsoid_ellipse.cpp  kalmanFilter.cpp  lapjv.cpp  update2d.cpp  update3d.cpp  utils.cpp
bb_utils/: CMakeLists.txt  package.xml
bb_utils/config/: benchmark_params.yaml  benchmark_params_multi_sens.yaml
bb_utils/include/bb_utils/: bb_benchmark.hpp  bb_visualizer.hpp  benchmark_data_type.hpp  lapjv.h
bb_utils/launch/: benchmark.launch.py  benchmark_tracking.launch.py
bb_utils/src/: bag_recorder.cpp  bb_benchmark.cpp  bb_publisher.cpp  bb_subscriber.cpp  bb_visualizer.cpp  lapjv.cpp  rewrite_bag_timestamps.cpp
docker_lidar_detection/: commands-in-container.txt  dockerfile  run_container.sh
pointpillars/: docker-compose.yml  dockerfile
scripts/: a  b  compute_stats.py  graphs.ipynb  long_functions.py  min_max_ellipse.ipynb  noSimplify_outputc.txt  noSimplify_outputpy.txt  requirements.txt  symbolic_equations.py  symbolic_math.ipynb
vista-detector/: docker-compose.yml  dockerfile  mht_reqs.txt  mht_reqs_jetson.txt  vista.pth
vista-detector/configs/: .bashrc  .tmux.conf
vista-detector/detector/: package.xml  setup.py
vista-detector/detector/detector/: lidar_detector.py
vista-detector/detector/detector/config/: odt_configs.py
vista-detector/detector/detector/vista/: setup.py
vista-detector/detector/detector/vista/det3d/: version.py
vista-detector/detector/detector/vista/det3d/core/bbox/: geometry.py
vista-detector/detector/detector/vista/det3d/core/sampler/: preprocess.py
vista-detector/detector/detector/vista/det3d/models/bbox_heads/: clear_mg_ohs_head.py  deep_decouple_clear_mg_ohs_head.py
vista-detector/detector/detector/vista/det3d/ops/nms/: nms_cpu.py  nms_gpu.py
vista-detector/detector/detector/vista/det3d/torchie/apis/: train.py
vista-detector/detector/detector/vista/det3d/torchie/utils/: config.py
vista-detector/detector/detector/vista/tools/: create_data.py  dist_test.py  train.py
vista-detector/detector/launch/: lidar_detector.launch.py
