<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bb_detection</name>
  <version>1.0.0</version>
  <description>Package to perform different detection algorithms</description>
  <maintainer email="alessandro.barbiero@mail.polimi.it">Alessandro Barbiero</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>vision_msgs</depend>
  <!-- Porting of tf.transformations -->
  <depend>tf_transformations</depend>

  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>python3-opencv</depend>
  <depend>ultralytics</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
